--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/dependency-injection": "~2.3|~3.0",
         "symfony/console": "~2.3|~3.0",
         "symfony/yaml": "~2.3|~3.0",
-        "kriswallsmith/assetic": "~1.4"
+        "assetic-php/assetic": "~2.0"
     },
     "require-dev": {
         "patchwork/jsqueeze": "~1.0",
